force-app/main/default/objects/Sales_Target_Report__c/Sales_Target_Report__c.object-meta.xml
<CustomObject>
    <description>东盟销售目标报表</description>
    <label>Sales Target Report</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Sales Target Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Target Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>