force-app/main/default/objects/Sales_Target_Report__c/fields/Daily_Sales__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales__c</fullName>
    <label>Daily Sales</label>
    <referenceTo>Retail_Number__c</referenceTo>
    <relationshipLabel>Sales Target Report</relationshipLabel>
    <relationshipName>Sales_Target_Report</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>