force-app/main/default/objects/Sales_Target_Report__c/fields/Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Status__c</fullName>
    <label>Inspection Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>