force-app/main/default/objects/Sales_Target_Report__c/fields/Store_Inspection_Manage__c.field-meta.xml
<CustomField>
    <fullName>Store_Inspection_Manage__c</fullName>
    <label>Store Inspection Manage</label>
    <referenceTo>Store_Inspection_Manage__c</referenceTo>
    <relationshipLabel>Sales Target Report</relationshipLabel>
    <relationshipName>Sales_Target_Report</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>